--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <!-- Hero Section -->
 <section class="hero">
   <div class="hero-slideshow">
-    <img id="hero-img" src="/images/hero1.jpg" alt="Hero image">
+    <img id="hero-img" src="/images/Cambridge1.jpg" alt="Hero image">
   </div>
 
   <div class="hero-overlay"></div>
@@ -82,14 +82,19 @@
 <!-- Horizontal Gallery -->
 <section class="horizontal-gallery">
   <div class="gallery-track">
-    <img src="/images/property1.jpg" alt="Property 1">
-    <img src="/images/property2.jpg" alt="Property 2">
-    <img src="/images/property3.jpg" alt="Property 3">
-
+    <img src="/images/Cambridge11.jpg" alt="Property 1">
+    <img src="/images/Cambridge12.jpg" alt="Property 2">
+    <img src="/images/Cambridge13.jpg" alt="Property 3">
+    <img src="/images/Cambridge14.jpg" alt="Property 1">
+    <img src="/images/Cambridge15.jpg" alt="Property 2">
+    <img src="/images/Cambridge16.jpg" alt="Property 3">
     <!-- duplicate for seamless loop -->
-    <img src="/images/property1.jpg" alt="Property 1">
-    <img src="/images/property2.jpg" alt="Property 2">
-    <img src="/images/property3.jpg" alt="Property 3">
+    <img src="/images/Cambridge11.jpg" alt="Property 1">
+    <img src="/images/Cambridge12.jpg" alt="Property 2">
+    <img src="/images/Cambridge13.jpg" alt="Property 3">
+    <img src="/images/Cambridge14.jpg" alt="Property 1">
+    <img src="/images/Cambridge15.jpg" alt="Property 2">
+    <img src="/images/Cambridge16.jpg" alt="Property 3">
   </div>
 </section>
 
