--- a/contact.html
+++ b/contact.html
@@ -78,12 +78,14 @@
     </div>
   </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <!-- JS Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.7.2/dist/vanilla-tilt.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+  <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 
-<script src="/js/main.js"></script>
-<script src="/js/nav.js"></script>
-<script src="/js/hero.js"></script>
-<script src="/js/cookies.js"></script>
+  <!-- Your Custom JS -->
+  <script src="/js/script.js"></script>
 </body>
 </html>
