--- a/index.html
+++ b/index.html
@@ -21,220 +21,174 @@
   <!-- Swiper -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 </head>
-<header>
-  <nav class="navbar">
-    <div class="logo">
-      <div class="logo-stack corner-logo">
-        <span class="hh">HH</span>
-        <span class="hood-homes">Hood Homes</span>
-      </div>
-    </div>
-
-    <div class="hamburger">
-      <span></span><span></span><span></span>
-    </div>
-
-    <ul class="nav-links">
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="/about.html">About</a></li>
-      <li><a href="/services.html">Services</a></li>
-      <li><a href="/blog.html">Blog</a></li>
-      <li><a href="/gallery.html">Gallery</a></li>
-      <li><a href="/contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-
 <body>
 
-<!-- Hero Section -->
-<section class="hero">
-  <div class="hero-slideshow">
-    <img id="hero-img" src="/images/Cambridge1.jpg" alt="Hero image">
+  <!-- Header / Navbar -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <div class="logo-stack corner-logo">
+          <span class="hh">HH</span>
+          <span class="hood-homes">Hood Homes</span>
+        </div>
+      </div>
+
+      <div class="hamburger">
+        <span></span><span></span><span></span>
+      </div>
+
+      <ul class="nav-links">
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/services.html">Services</a></li>
+        <li><a href="/blog.html">Blog</a></li>
+        <li><a href="/gallery.html">Gallery</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Cookie Banner -->
+  <div id="cookie-banner" hidden class="cookie-banner">
+    <p>We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies.</p>
+    <button id="accept-cookies">Accept All</button>
   </div>
 
-  <div class="hero-overlay"></div>
-  <div class="hero-content" data-aos="zoom-in" data-aos-delay="100">
-    <h1 class="hero-title logo-stack">
-      <span class="hh" data-aos="fade-right" data-aos-delay="200">HH</span>
-      <span class="hood-homes" data-aos="fade-left" data-aos-delay="300">Hood Homes</span>
-    </h1>
-    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="400">
-      Your Cambridge Property Expert
-    </p>
-    <a href="/contact.html" class="cta-button" data-aos="zoom-in" data-aos-delay="500">
-      Book a Valuation
-    </a>
-  </div>
-</section>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-slideshow">
+      <img id="hero-img" src="/images/Cambridge1.jpg" alt="Hero image">
+    </div>
 
-<script>
-  const heroImages = ["hero1.jpg", "hero2.jpg", "hero3.jpg"];
-  let heroIndex = 0;
-  const heroImg = document.getElementById("hero-img");
-
-  setInterval(() => {
-    heroIndex = (heroIndex + 1) % heroImages.length;
-    heroImg.src = "/images/gallery/" + heroImages[heroIndex];
-  }, 5000);
-</script>
-
-<!-- Horizontal Gallery -->
-<section class="horizontal-gallery">
-  <div class="gallery-track">
-    <img src="/images/Cambridge11.jpg" alt="Property 1">
-    <img src="/images/Cambridge12.jpg" alt="Property 2">
-    <img src="/images/Cambridge13.jpg" alt="Property 3">
-    <img src="/images/Cambridge14.jpg" alt="Property 1">
-    <img src="/images/Cambridge15.jpg" alt="Property 2">
-    <img src="/images/Cambridge16.jpg" alt="Property 3">
-    <!-- duplicate for seamless loop -->
-    <img src="/images/Cambridge11.jpg" alt="Property 1">
-    <img src="/images/Cambridge12.jpg" alt="Property 2">
-    <img src="/images/Cambridge13.jpg" alt="Property 3">
-    <img src="/images/Cambridge14.jpg" alt="Property 1">
-    <img src="/images/Cambridge15.jpg" alt="Property 2">
-    <img src="/images/Cambridge16.jpg" alt="Property 3">
-  </div>
-</section>
-
-<!-- Full Page Background Wrapper -->
-<section class="split-section" style="display:flex;gap:3rem;margin:5rem auto;max-width:1200px;padding:0 1rem;align-items:stretch;">
-
-  <!-- Text Box -->
-  <div class="split-text" data-aos="fade-right" style="flex:1;display:flex;align-items:stretch;">
-    <div class="split-text-box" style="flex:1;display:flex;flex-direction:column;justify-content:space-between;background:rgba(255,255,255,0.95);padding:2rem;border-radius:12px;box-shadow:0 0 15px rgba(212,175,55,0.3);">
-
-      <h2 class="section-heading" style="font-size:2rem;margin-bottom:0.5rem;color:#333;">
-        Meet the Owner
-      </h2>
-
-      <p>
-        I’m a Cambridge local with a lifelong passion for property and a career that spans every corner of the sector.
-        From managing branches to overseeing refurbishments, lettings, and sales, I’ve built a strong foundation of
-        experience and a reputation for delivering results.
+    <div class="hero-overlay"></div>
+    <div class="hero-content" data-aos="zoom-in" data-aos-delay="100">
+      <h1 class="hero-title logo-stack">
+        <span class="hh" data-aos="fade-right" data-aos-delay="200">HH</span>
+        <span class="hood-homes" data-aos="fade-left" data-aos-delay="300">Hood Homes</span>
+      </h1>
+      <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="400">
+        Your Cambridge Property Expert
       </p>
-
-      <p>
-        The property market is changing fast, and I believe success today requires a fresh, forward-thinking approach.
-        I take the time to understand each client’s individual goals and tailor my approach to meet them.
-      </p>
-
-      <p>
-        Having worked across the entire property sector — including for large corporate agents — I’ve seen the
-        difference between ticking boxes and truly delivering for clients.
-      </p>
-
-      <p>
-        Property is changing, and your choice of agent has never mattered more. I treat every property as if it were my
-        own, protecting its value and maximising its potential.
-      </p>
-
-      <a href="/about.html"
-         class="cta-button"
-         style="background:#d4af37;color:#111;padding:0.8rem 1.5rem;border-radius:30px;font-weight:bold;text-decoration:none;align-self:flex-start;margin-top:1rem;">
-        Learn More
+      <a href="/contact.html" class="cta-button" data-aos="zoom-in" data-aos-delay="500">
+        Book a Valuation
       </a>
-
     </div>
-  </div>
+  </section>
 
-  <!-- Image Box -->
-  <div class="split-image" data-aos="fade-left" style="flex:1;display:flex;align-items:stretch;">
-    <img src="/images/JoeProffesional2.jpg"
-         alt="Joe Hood"
-         style="width:100%;height:100%;object-fit:cover;object-position:top center;border-radius:12px;box-shadow:0 0 15px rgba(0,0,0,0.25);">
-  </div>
+  <!-- Hero images JSON for JS -->
+  <script type="application/json" id="hero-images-data">
+    ["Cambridge1.jpg","Cambridge2.jpg","Cambridge3.jpg","Cambridge5.jpg"]
+  </script>
 
-</section>
-
-<!-- Why Choose Us -->
-<section class="why-choose" data-aos="fade-up">
-  <h2 class="section-heading text-center">Why Choose Hood Homes</h2>
-
-  <div class="reasons-grid">
-
-    <div class="reason-row">
-      <div class="reason-item">
-        <div class="reason-icon"><i class="fa-solid fa-handshake"></i></div>
-        <h3>Partnership</h3>
-        <p>We build strong, trusting relationships with every client.</p>
-      </div>
-
-      <div class="reason-item">
-        <div class="reason-icon"><i class="fa-solid fa-graduation-cap"></i></div>
-        <h3>Experience</h3>
-        <p>Years of hands-on experience across sales, lettings, and management.</p>
-      </div>
+  <!-- Horizontal Gallery -->
+  <section class="horizontal-gallery">
+    <div class="gallery-track">
+      <img src="/images/Cambridge11.jpg" alt="Property 1">
+      <img src="/images/Cambridge12.jpg" alt="Property 2">
+      <img src="/images/Cambridge13.jpg" alt="Property 3">
+      <img src="/images/Cambridge14.jpg" alt="Property 4">
+      <img src="/images/Cambridge15.jpg" alt="Property 5">
+      <img src="/images/Cambridge16.jpg" alt="Property 6">
+      <!-- duplicate for seamless loop -->
+      <img src="/images/Cambridge11.jpg" alt="Property 1">
+      <img src="/images/Cambridge12.jpg" alt="Property 2">
+      <img src="/images/Cambridge13.jpg" alt="Property 3">
+      <img src="/images/Cambridge14.jpg" alt="Property 4">
+      <img src="/images/Cambridge15.jpg" alt="Property 5">
+      <img src="/images/Cambridge16.jpg" alt="Property 6">
     </div>
+  </section>
 
-    <div class="reason-row">
-      <div class="reason-item">
-        <div class="reason-icon"><i class="fa-solid fa-life-ring"></i></div>
-        <h3>Safe Hands</h3>
-        <p>Your property and investments are fully protected under our care.</p>
-      </div>
-
-      <div class="reason-item">
-        <div class="reason-icon"><i class="fa-solid fa-cloud-upload"></i></div>
-        <h3>Tech</h3>
-        <p>Cutting-edge tools and digital marketing.</p>
+  <!-- Split Section -->
+  <section class="split-section" style="display:flex;gap:3rem;margin:5rem auto;max-width:1200px;padding:0 1rem;align-items:stretch;">
+    <!-- Text Box -->
+    <div class="split-text" data-aos="fade-right" style="flex:1;display:flex;align-items:stretch;">
+      <div class="split-text-box" style="flex:1;display:flex;flex-direction:column;justify-content:space-between;background:rgba(255,255,255,0.95);padding:2rem;border-radius:12px;box-shadow:0 0 15px rgba(212,175,55,0.3);">
+        <h2 class="section-heading" style="font-size:2rem;margin-bottom:0.5rem;color:#333;">Meet the Owner</h2>
+        <p>I’m a Cambridge local with a lifelong passion for property and a career that spans every corner of the sector. From managing branches to overseeing refurbishments, lettings, and sales, I’ve built a strong foundation of experience and a reputation for delivering results.</p>
+        <p>The property market is changing fast, and I believe success today requires a fresh, forward-thinking approach. I take the time to understand each client’s individual goals and tailor my approach to meet them.</p>
+        <p>Having worked across the entire property sector — including for large corporate agents — I’ve seen the difference between ticking boxes and truly delivering for clients.</p>
+        <p>Property is changing, and your choice of agent has never mattered more. I treat every property as if it were my own, protecting its value and maximising its potential.</p>
+        <a href="/about.html" class="cta-button" style="background:#d4af37;color:#111;padding:0.8rem 1.5rem;border-radius:30px;font-weight:bold;text-decoration:none;align-self:flex-start;margin-top:1rem;">Learn More</a>
       </div>
     </div>
+    <!-- Image Box -->
+    <div class="split-image" data-aos="fade-left" style="flex:1;display:flex;align-items:stretch;">
+      <img src="/images/JoeProffesional2.jpg" alt="Joe Hood" style="width:100%;height:100%;object-fit:cover;object-position:top center;border-radius:12px;box-shadow:0 0 15px rgba(0,0,0,0.25);">
+    </div>
+  </section>
 
-    <div class="reason-row">
-      <div class="reason-item">
-        <div class="reason-icon"><i class="fa-solid fa-users"></i></div>
-        <h3>People</h3>
-        <p>We genuinely care and tailor everything to the client.</p>
+  <!-- Why Choose Us -->
+  <section class="why-choose" data-aos="fade-up">
+    <h2 class="section-heading text-center">Why Choose Hood Homes</h2>
+    <div class="reasons-grid">
+      <div class="reason-row">
+        <div class="reason-item">
+          <div class="reason-icon"><i class="fa-solid fa-handshake"></i></div>
+          <h3>Partnership</h3>
+          <p>We build strong, trusting relationships with every client.</p>
+        </div>
+        <div class="reason-item">
+          <div class="reason-icon"><i class="fa-solid fa-graduation-cap"></i></div>
+          <h3>Experience</h3>
+          <p>Years of hands-on experience across sales, lettings, and management.</p>
+        </div>
+      </div>
+      <div class="reason-row">
+        <div class="reason-item">
+          <div class="reason-icon"><i class="fa-solid fa-life-ring"></i></div>
+          <h3>Safe Hands</h3>
+          <p>Your property and investments are fully protected under our care.</p>
+        </div>
+        <div class="reason-item">
+          <div class="reason-icon"><i class="fa-solid fa-cloud-upload"></i></div>
+          <h3>Tech</h3>
+          <p>Cutting-edge tools and digital marketing.</p>
+        </div>
+      </div>
+      <div class="reason-row">
+        <div class="reason-item">
+          <div class="reason-icon"><i class="fa-solid fa-users"></i></div>
+          <h3>People</h3>
+          <p>We genuinely care and tailor everything to the client.</p>
+        </div>
       </div>
     </div>
+  </section>
 
-  </div>
-</section>
-
-<footer id="main-footer" class="footer premium-footer hidden-footer">
-
-  <div class="footer-glow-box">
-    <div class="footer-container container">
-
-      <div class="footer-info">
-        <h3>Talk To Us</h3>
-        <p>5 Valiant Lane, Cambridge, CB5 8XB</p>
-        <p><strong>Call:</strong> <a href="tel:07841519614">07841 519 614</a></p>
-        <p><strong>Email:</strong> <a href="mailto:Office@hoodhomes.co.uk">Office@hoodhomes.co.uk</a></p>
+  <!-- Footer -->
+  <footer id="main-footer" class="footer premium-footer hidden-footer">
+    <div class="footer-glow-box">
+      <div class="footer-container container">
+        <div class="footer-info">
+          <h3>Talk To Us</h3>
+          <p>5 Valiant Lane, Cambridge, CB5 8XB</p>
+          <p><strong>Call:</strong> <a href="tel:07841519614">07841 519 614</a></p>
+          <p><strong>Email:</strong> <a href="mailto:Office@hoodhomes.co.uk">Office@hoodhomes.co.uk</a></p>
+        </div>
+        <!-- NETLIFY FORM -->
+        <div class="footer-form">
+          <form name="footer-contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="contact-form">
+            <input type="hidden" name="form-name" value="footer-contact">
+            <input type="text" name="name" placeholder="Name" required>
+            <input type="email" name="email" placeholder="Email" required>
+            <textarea name="message" placeholder="Message" required></textarea>
+            <button type="submit" class="cta-button">Submit</button>
+          </form>
+        </div>
       </div>
-
-      <!-- NETLIFY FORM -->
-      <div class="footer-form">
-        <form
-          name="footer-contact"
-          method="POST"
-          data-netlify="true"
-          netlify-honeypot="bot-field"
-          class="contact-form">
-
-          <input type="hidden" name="form-name" value="footer-contact">
-
-          <input type="text" name="name" placeholder="Name" required>
-          <input type="email" name="email" placeholder="Email" required>
-          <textarea name="message" placeholder="Message" required></textarea>
-
-          <button type="submit" class="cta-button">Submit</button>
-        </form>
-      </div>
-
     </div>
-  </div>
-</footer>
+  </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <!-- JS Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.7.2/dist/vanilla-tilt.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+  <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 
-<script src="/js/main.js"></script>
-<script src="/js/nav.js"></script>
-<script src="/js/hero.js"></script>
-<script src="/js/cookies.js"></script>
+  <!-- Your Custom JS -->
+  <script src="/js/script.js"></script>
 
 </body>
 </html>
