--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -20,6 +20,7 @@
 
   <!-- Swiper -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
 </head>
 <header>
   <nav class="navbar">
@@ -44,7 +45,6 @@
     </ul>
   </nav>
 </header>
-
 
 <body>
 
@@ -91,9 +91,9 @@
 
   <div class="swiper servicesGallery">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="/images/Cambridge1.jpg"></div>
-      <div class="swiper-slide"><img src="/images/Cambridge2.jpg"></div>
-      <div class="swiper-slide"><img src="/images/Cambridge3.jpg"></div>
+      <div class="swiper-slide"><img src="/images/Cambridge1.jpg" alt="Cambridge 1"></div>
+      <div class="swiper-slide"><img src="/images/Cambridge2.jpg" alt="Cambridge 2"></div>
+      <div class="swiper-slide"><img src="/images/Cambridge3.jpg" alt="Cambridge 3"></div>
     </div>
 
     <div class="swiper-button-next"></div>
@@ -171,8 +171,7 @@
   </div>
 </section>
 
-
-    <div class="container">
+   <div class="container">
 <!-- Why Choose Us -->
 <section class="why-choose" data-aos="fade-up">
     <h2 class="section-heading text-center">Why Choose Hood Homes</h2>
@@ -361,14 +360,15 @@
     </div>
   </div>
 </footer>
-  <!-- JS Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.7.2/dist/vanilla-tilt.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
-  <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 
-  <!-- Your Custom JS -->
-  <script src="/js/script.js"></script>
+
+<!-- JS Libraries -->
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.7.2/dist/vanilla-tilt.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+<script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+<script src="/js/script.js"></script>
+
 </body>
 </html>
