--- a/services.html
+++ b/services.html
@@ -89,17 +89,22 @@
 <section class="services-gallery container">
   <h2 class="section-heading">Our Work in Cambridge</h2>
 
-  <div class="swiper servicesGallery">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="/images/Cambridge1.jpg" alt="Cambridge 1"></div>
-      <div class="swiper-slide"><img src="/images/Cambridge2.jpg" alt="Cambridge 2"></div>
-      <div class="swiper-slide"><img src="/images/Cambridge3.jpg" alt="Cambridge 3"></div>
+    <div class="gallery-track">
+      <img src="/images/35_Knightly_Avenue_10.jpg" alt="Property 1">
+      <img src="/images/35_Knightly_Avenue_2.jpg" alt="Property 2">
+      <img src="/images/35_Knightly_Avenue_27.jpg" alt="Property 3">
+      <img src="/images/Cambridge17.jpg" alt="Property 4">
+      <img src="/images/Cambridge18.jpg" alt="Property 5">
+      <img src="/images/Cambridge16.jpg" alt="Property 6">
+      <!-- duplicate for seamless loop -->
+      <img src="/images/48_Hillfield_Comberton_35.jpg" alt="Property 1">
+      <img src="/images/48_Hillfield_Comberton_37.jpg" alt="Property 2">
+      <img src="/images/48_Hillfield_Comberton_4.jpg" alt="Property 3">
+      <img src="/images/48_Hillfield_Comberton_41.jpg" alt="Property 4">
+      <img src="/images/Cambridge15.jpg" alt="Property 5">
+      <img src="/images/Cambridge11.jpg" alt="Property 6">
     </div>
-
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-  </div>
-</section>
+  </section>
 
 <!-- Services Section -->
 <section class="split-section">
