--- a/contact.html
+++ b/contact.html
@@ -121,11 +121,28 @@
 
       <!-- Partner Logos -->
       <div class="logos-scroll-wrapper">
-        <ul class="partner-logos-scroll">
+         <ul class="partner-logos-scroll">
           <li><img src="/images/zoopla.svg" alt="Zoopla"></li>
           <li><img src="/images/rightmove.svg" alt="Rightmove"></li>
           <li><img src="/images/the-property-ombudsman.svg" alt="Ombudsman"></li>
-          <li><img src="/images/tsi-3.svg" alt="TSI"></li>
+          <li class="logo-large">
+  <img src="/images/clientmoneyprotection.png" alt="Client Money Protect">
+</li>
+<li class="logo-large">
+  <img src="/images/depositprotection.jpg" alt="Deposit Protection Service">
+</li>
+          <li><img src="/images/tds.svg" alt="TDS"></li>
+          <!-- Duplicate set (REQUIRED) -->
+             <li><img src="/images/zoopla.svg" alt="Zoopla"></li>
+          <li><img src="/images/rightmove.svg" alt="Rightmove"></li>
+          <li><img src="/images/the-property-ombudsman.svg" alt="Ombudsman"></li>
+          <li class="logo-large">
+  <img src="/images/clientmoneyprotection.png" alt="Client Money Protect">
+</li>
+
+<li class="logo-large">
+  <img src="/images/depositprotection.jpg" alt="Deposit Protection Service">
+</li>
           <li><img src="/images/tds.svg" alt="TDS"></li>
         </ul>
       </div>
