--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     </div>
   </section>
 
+
  <footer id="main-footer" class="footer premium-footer">
 
   <div class="footer-glow-box">
@@ -201,8 +202,7 @@
       </div>
 
     </div>
-
-    <!-- Bottom Bar -->
+  <!-- Bottom Bar -->
     <div class="footer-bottom-bar">
 
       <!-- Partner Logos -->
@@ -211,11 +211,27 @@
           <li><img src="/images/zoopla.svg" alt="Zoopla"></li>
           <li><img src="/images/rightmove.svg" alt="Rightmove"></li>
           <li><img src="/images/the-property-ombudsman.svg" alt="Ombudsman"></li>
-          <li><img src="/images/tsi-3.svg" alt="TSI"></li>
+          <li class="logo-large">
+  <img src="/images/clientmoneyprotection.png" alt="Client Money Protect">
+</li>
+<li class="logo-large">
+  <img src="/images/depositprotection.jpg" alt="Deposit Protection Service">
+</li>
+          <li><img src="/images/tds.svg" alt="TDS"></li>
+          <!-- Duplicate set (REQUIRED) -->
+             <li><img src="/images/zoopla.svg" alt="Zoopla"></li>
+          <li><img src="/images/rightmove.svg" alt="Rightmove"></li>
+          <li><img src="/images/the-property-ombudsman.svg" alt="Ombudsman"></li>
+          <li class="logo-large">
+  <img src="/images/clientmoneyprotection.png" alt="Client Money Protect">
+</li>
+
+<li class="logo-large">
+  <img src="/images/depositprotection.jpg" alt="Deposit Protection Service">
+</li>
           <li><img src="/images/tds.svg" alt="TDS"></li>
         </ul>
       </div>
-
       <!-- Legal -->
       <div class="footer-legal-links">
         <p>
