--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       <li><a href="/index.html">Home</a></li>
       <li><a href="/about.html">About</a></li>
       <li><a href="/services.html">Services</a></li>
-      <li><a href="/blog.html">Blog</a></li>
+      <li><a href="/blog/blog.html">Blog</a></li>
       <li><a href="/gallery.html">Gallery</a></li>
       <li><a href="/contact.html">Contact</a></li>
     </ul>
@@ -96,17 +96,21 @@
             About Joe Hood
           </h2>
 
-          <p>
-            I’m a Cambridge local with a lifelong passion for property and a career that spans every corner of the sector.
-            From managing branches to overseeing refurbishments, lettings, and sales, I’ve built a strong foundation of
-            experience and a reputation for delivering results. Before property, I played professional football — an
-            experience that shaped my work ethic, drive, and commitment to high standards.
+              <p>
+            I’m a Cambridge local with a lifelong passion for property and a career that spans every corner of the sector. 
+            From managing branches to overseeing refurbishments, lettings, and sales, I’ve built a strong foundation of experience 
+            and a reputation for delivering results. Before property, I played professional football, an experience that shaped 
+            my work ethic, drive, and commitment to high standards. I bring that same focus and discipline into every deal, 
+            ensuring clients receive exceptional service from start to finish.
           </p>
 
           <p>
-            The property market is changing fast. I believe success today requires a fresh, forward-thinking approach.
-            I take the time to understand each client’s individual goals and tailor my approach to meet them, ensuring
-            every decision is strategic and well-informed.
+            The property market is changing fast. I believe success today requires a fresh, forward-thinking approach, 
+            and I pride myself on being adaptable, efficient, and always one step ahead. I take the time to understand 
+            each client’s individual goals and tailor my approach to meet them, making sure every decision is strategic 
+            and well-informed. By combining hands-on experience with modern methods and market insight, I aim to maximise 
+            value and minimise risk at every stage of the process. Whether you’re investing, selling, or letting, my goal 
+            is simple: to make the process seamless and deliver outstanding outcomes every time.
           </p>
 
           <a href="/services.html"
@@ -129,48 +133,63 @@
   </div>
 </div>
 
-<!-- Why Choose Me -->
-<section class="why-choose" data-aos="fade-up">
-  <h2 class="section-heading text-center">Why Choose Me</h2>
+ <!-- Why Choose Me Section -->
+    <section class="why-choose" data-aos="fade-up">
+      <h2 class="section-heading text-center">Why Choose Me</h2>
 
-  <div class="reasons-grid">
-    <div class="reason-row">
-      <div class="reason-item">
-        <div class="reason-icon"><i class="fa-solid fa-handshake"></i></div>
-        <h3>Personal Service</h3>
-        <p>Every client is treated individually with a tailored approach.</p>
-      </div>
+      <div class="reasons-grid" data-aos="fade-up" data-aos-delay="100">
+        <div class="reason-row">
+          <div class="reason-item" data-aos="zoom-in" data-aos-delay="150">
+            <div class="reason-icon"><i class="fa-solid fa-handshake"></i></div>
+            <h3>Personal Service</h3>
+            <p>
+              Every client is treated individually, with a tailored approach
+              that suits your goals.
+            </p>
+          </div>
+          <div class="reason-item" data-aos="zoom-in" data-aos-delay="200">
+            <div class="reason-icon">
+              <i class="fa-solid fa-graduation-cap"></i>
+            </div>
+            <h3>Experience</h3>
+            <p>
+              Years of hands-on experience across lettings, sales, and property
+              management.
+            </p>
+          </div>
+        </div>
 
-      <div class="reason-item">
-        <div class="reason-icon"><i class="fa-solid fa-graduation-cap"></i></div>
-        <h3>Experience</h3>
-        <p>Hands-on experience across lettings, sales, and management.</p>
-      </div>
-    </div>
+        <div class="reason-row">
+          <div class="reason-item" data-aos="zoom-in" data-aos-delay="250">
+            <div class="reason-icon"><i class="fa-solid fa-bullseye"></i></div>
+            <h3>Focused</h3>
+            <p>
+              Every decision is strategic, ensuring maximum value and minimal
+              risk.
+            </p>
+          </div>
+          <div class="reason-item" data-aos="zoom-in" data-aos-delay="300">
+            <div class="reason-icon"><i class="fa-solid fa-lightbulb"></i></div>
+            <h3>Forward-Thinking</h3>
+            <p>
+              Innovative solutions that keep you ahead in a fast-changing
+              property market.
+            </p>
+          </div>
+        </div>
 
-    <div class="reason-row">
-      <div class="reason-item">
-        <div class="reason-icon"><i class="fa-solid fa-bullseye"></i></div>
-        <h3>Focused</h3>
-        <p>Every decision is strategic, maximising value and minimising risk.</p>
+        <div class="reason-row">
+          <div class="reason-item" data-aos="zoom-in" data-aos-delay="350">
+            <div class="reason-icon"><i class="fa-solid fa-users"></i></div>
+            <h3>Trusted Partner</h3>
+            <p>
+              I work with integrity and transparency, ensuring peace of mind
+              every step of the way.
+            </p>
+          </div>
+        </div>
       </div>
-
-      <div class="reason-item">
-        <div class="reason-icon"><i class="fa-solid fa-lightbulb"></i></div>
-        <h3>Forward-Thinking</h3>
-        <p>Innovative solutions for a changing market.</p>
-      </div>
-    </div>
-
-    <div class="reason-row">
-      <div class="reason-item">
-        <div class="reason-icon"><i class="fa-solid fa-users"></i></div>
-        <h3>Trusted Partner</h3>
-        <p>Integrity, transparency, and peace of mind.</p>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 
  <!-- GOOGLE MAPS EMBED -->
     <section class="locations-map" data-aos="fade-up" data-aos-delay="100">
