--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li><a href="/index.html">Home</a></li>
         <li><a href="/about.html">About</a></li>
         <li><a href="/services.html">Services</a></li>
-        <li><a href="/blog.html">Blog</a></li>
+        <li><a href="/blog/blog.html">Blog</a></li>
         <li><a href="/gallery.html">Gallery</a></li>
         <li><a href="/contact.html">Contact</a></li>
       </ul>
@@ -101,10 +101,22 @@
     <div class="split-text" data-aos="fade-right" style="flex:1;display:flex;align-items:stretch;">
       <div class="split-text-box" style="flex:1;display:flex;flex-direction:column;justify-content:space-between;background:rgba(255,255,255,0.95);padding:2rem;border-radius:12px;box-shadow:0 0 15px rgba(212,175,55,0.3);">
         <h2 class="section-heading" style="font-size:2rem;margin-bottom:0.5rem;color:#333;">Meet the Owner</h2>
-        <p>I’m a Cambridge local with a lifelong passion for property and a career that spans every corner of the sector. From managing branches to overseeing refurbishments, lettings, and sales, I’ve built a strong foundation of experience and a reputation for delivering results.</p>
-        <p>The property market is changing fast, and I believe success today requires a fresh, forward-thinking approach. I take the time to understand each client’s individual goals and tailor my approach to meet them.</p>
-        <p>Having worked across the entire property sector — including for large corporate agents — I’ve seen the difference between ticking boxes and truly delivering for clients.</p>
-        <p>Property is changing, and your choice of agent has never mattered more. I treat every property as if it were my own, protecting its value and maximising its potential.</p>
+              <p>
+  I’m a Cambridge local with a lifelong passion for property and a career that spans every corner of the sector. From managing branches to overseeing refurbishments, lettings, and sales, I’ve built a strong foundation of experience and a reputation for delivering results. Before property, I played professional football,  an experience that shaped my work ethic, drive, and commitment to high standards. I bring that same focus and discipline into every deal, ensuring clients receive exceptional service from start to finish.
+</p>
+
+<p>
+  The property market is changing fast, and I believe success today requires a fresh, forward-thinking approach. I take the time to understand each client’s individual goals and tailor my approach to meet them, making sure every decision is strategic and well-informed. By combining hands-on experience with modern methods and market insight, I aim to maximise value and minimise risk at every stage of the process. Whether you’re investing, selling, or letting, my goal is simple: to make the process seamless and deliver outstanding outcomes.
+</p>
+
+<p>
+  Having worked across the entire property sector, including for large corporate agents, I’ve seen the difference between ticking boxes and truly delivering for clients. Too often, service levels in the corporate world are rushed, impersonal, and reactive. In today’s fast-moving and unpredictable market, that simply isn’t good enough.
+</p>
+
+<p>
+  Property is changing, and your choice of agent has never mattered more. You need someone who is proactive, adaptable, and laser-focused on your goals,  not just hitting internal sales targets. I treat every property as if it were my own, protecting its value and maximising its potential. My commitment to high standards, clear communication, and efficient processes ensures a seamless experience from start to finish.
+</p>
+
         <a href="/about.html" class="cta-button" style="background:#d4af37;color:#111;padding:0.8rem 1.5rem;border-radius:30px;font-weight:bold;text-decoration:none;align-self:flex-start;margin-top:1rem;">Learn More</a>
       </div>
     </div>
@@ -122,31 +134,48 @@
         <div class="reason-item">
           <div class="reason-icon"><i class="fa-solid fa-handshake"></i></div>
           <h3>Partnership</h3>
-          <p>We build strong, trusting relationships with every client.</p>
+          <p>
+      We build strong, trusting relationships with every client. From the first meeting to the final handover, 
+      we guide you step by step, ensuring that your goals are understood and prioritised.
+    </p>
+
         </div>
         <div class="reason-item">
           <div class="reason-icon"><i class="fa-solid fa-graduation-cap"></i></div>
           <h3>Experience</h3>
-          <p>Years of hands-on experience across sales, lettings, and management.</p>
+            <p>
+      With years of hands-on experience across sales, lettings, and management, we bring deep insight 
+      into every aspect of the property sector. Having worked for both local and corporate agencies, 
+      we know what works.
+    </p>
         </div>
       </div>
       <div class="reason-row">
         <div class="reason-item">
           <div class="reason-icon"><i class="fa-solid fa-life-ring"></i></div>
           <h3>Safe Hands</h3>
-          <p>Your property and investments are fully protected under our care.</p>
+             <p>
+      Your property and investments are fully protected under our care. We are fully accredited, compliant, 
+      and meticulous about risk management. Every decision we make is guided by safeguarding your interests.
+    </p>
         </div>
         <div class="reason-item">
           <div class="reason-icon"><i class="fa-solid fa-cloud-upload"></i></div>
           <h3>Tech</h3>
-          <p>Cutting-edge tools and digital marketing.</p>
+            <p>
+      We leverage cutting-edge tools, digital marketing, and online booking platforms to streamline the process. 
+      From professional photography to virtual viewings and automated tenant management.
+    </p>
         </div>
       </div>
       <div class="reason-row">
         <div class="reason-item">
           <div class="reason-icon"><i class="fa-solid fa-users"></i></div>
           <h3>People</h3>
-          <p>We genuinely care and tailor everything to the client.</p>
+           <p>
+      We genuinely care about our clients and listen to their unique needs. Every service we provide is tailored 
+      to deliver a personal, high-quality experience.
+    </p>
         </div>
       </div>
     </div>
