--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,7 @@
     <ul class="nav-links">
       <li><a href="/index.html">Home</a></li>
       <li><a href="/about.html">About</a></li>
+      <li><a href="/blog/blog.html">Blog</a></li>
       <li><a href="/services.html">Services</a></li>
       <li><a href="/gallery.html" class="active">Gallery</a></li>
       <li><a href="/contact.html">Contact</a></li>
